# pin-actions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: ADVANCED_USAGE.md  BUILD_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  SECURITY.md
examples/: usage.sh
src/: action.rs  git.rs  main.rs  parser.rs  workflow.rs
tests/: integration.rs
