[package]
name = "pin-actions"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Pin GitHub Actions to commit SHAs for improved security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pin-actions"
readme = "README.md"
keywords = ["github", "actions", "security", "ci", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "color"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Git operations
git2 = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# File operations
walkdir = "2.5"
ignore = "0.4"

# Regex
regex = "1.11"
lazy_static = "1.5"

# Colors and formatting
colored = "2.1"
indicatif = "0.17"

# Concurrency
rayon = "1.10"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.5"
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "pin-actions"
path = "src/main.rs"
